--- a/style.css
+++ b/style.css
@@ -1,1 +1,11 @@
+body {
+  font-family: sans-serif;
+  background: #f5f5f5;
+}
 
+#map {
+  width: 900px;
+  height: 600px;
+  border: 1px solid black;
+  background: white;
+}
