--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
 body {
   font-family: sans-serif;
+}
+
+#map {
+  width: 900px;
+  height: 600px;
+  border: 1px solid black;
+  background: white;
+}body {
+  font-family: sans-serif;
   background: #f5f5f5;
 }
 
