--- a/style.css
+++ b/style.css
@@ -1,20 +1,37 @@
 body {
-  font-family: sans-serif;
+  margin: 0;
+  font-family: Arial, sans-serif;
+}
+
+#container {
+  display: flex;
+  height: 100vh;
 }
 
 #map {
-  width: 900px;
-  height: 600px;
-  border: 1px solid black;
   background: white;
-}body {
-  font-family: sans-serif;
-  background: #f5f5f5;
+  border: 1px solid black;
+  flex-grow: 1;
 }
 
-#map {
-  width: 900px;
-  height: 600px;
-  border: 1px solid black;
-  background: white;
+#sidebar {
+  width: 260px;
+  border-left: 1px solid black;
+  padding: 10px;
+  box-sizing: border-box;
+  background: #f2f2f2;
+}
+
+button {
+  width: 100%;
+  margin-top: 8px;
+}
+
+input {
+  width: 100%;
+  margin-top: 4px;
+}
+
+.city {
+  cursor: pointer;
 }
